[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/new-prof-select-wheel/NewProficiencySelectWheel.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/ftf-logo.png" type="Texture" id=2]
[ext_resource path="res://assets/interfaces/proficiencies/icons/ability-cancel.png" type="Texture" id=3]
[ext_resource path="res://interface/new-prof-select-wheel/WheelItem.gd" type="Script" id=4]
[ext_resource path="res://assets/interfaces/proficiencies/icons/defender.png" type="Texture" id=5]
[ext_resource path="res://assets/interfaces/proficiencies/icons/arcobatics.png" type="Texture" id=6]
[ext_resource path="res://MyTween.gd" type="Script" id=7]

[node name="NewProficiencySelectWheel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 255.886
margin_top = 126.651
margin_right = 255.886
margin_bottom = 126.651
script = ExtResource( 1 )

[node name="selectedItemSlot" type="Control" parent="."]
margin_left = 3.0
margin_top = -1.0
margin_right = 43.0
margin_bottom = 39.0

[node name="ColorRect" type="ColorRect" parent="selectedItemSlot"]
margin_left = 86.5558
margin_top = 213.824
margin_right = 177.556
margin_bottom = 293.824
color = Color( 0.254902, 0.254902, 0.254902, 1 )

[node name="ColorRect2" type="ColorRect" parent="selectedItemSlot"]
margin_left = 93.5558
margin_top = 216.824
margin_right = 171.556
margin_bottom = 289.824
color = Color( 0.368627, 0.380392, 0.176471, 1 )

[node name="wheel" type="TextureRect" parent="."]
editor/display_folded = true
margin_right = 273.0
margin_bottom = 273.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 136.5, 136.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="wheel"]
position = Vector2( 136, 19 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="wheel"]
position = Vector2( 247, 190 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="wheel"]
position = Vector2( 15, 181 )
texture = ExtResource( 6 )
script = ExtResource( 4 )

[node name="wheelCenter" type="Position2D" parent="."]
position = Vector2( 136.5, 136.5 )

[node name="selectionPoint" type="Position2D" parent="."]
position = Vector2( 107.463, 225.322 )

[node name="spinTween" type="Node" parent="."]
script = ExtResource( 7 )
maxSpeed = 1024.0
